--- a/hm.html
+++ b/hm.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>honorable mentions</title>
+    <title>Honorable-Mentions</title>
+    <link rel="stylesheet" href="hm.css">
+    <link href="https://fonts.cdnfonts.com/css/pixel12x10" rel="stylesheet">
 </head>
 <body>
-    <h1>honorable mentions</h1>
+    <header>
+        <a href="index.html"><h2>home</h2></a>
+    </header>
+    <h1>Honorable Mentions</h1>
+    <h3>warlos - femboy</h3>
+    <h3>ghxst - ugly asf lol</h3>
+    <h3>eze - mexican</h3>
 </body>
 </html>
