--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.cdnfonts.com/css/pic0" rel="stylesheet">
 </head>
 <body>
-    <header><a href="https://discord.gg/vPTJ7vYEue" target="_blank"><p>Discord</p></a> <a href="hm.html" target="_blank"><p>h-m</p></a></header>
+    <header><a href="https://discord.gg/vPTJ7vYEue" target="_blank"><p>Discord</p></a> <a href="hm.html"><p>h-m</p></a></header>
     <div class="container">
         <div id="a" class="box">
             <img src="yoa.png" draggable="false" width="145px">
